--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -12,6 +12,7 @@ body {
 .header {
   @include flexrow(center);
   gap: $indent__s;
+  background-color: $color-minsk;
 
   @include responsive-tablet {
     @include flexrow(space-between);
@@ -28,12 +29,12 @@ body {
 
     @include responsive-tablet {
       display: block;
-      width: 100px;
+      width: 70px;
     }
   }
 
   &__logo {
-    width: 100px;
+    width: 10px;
     flex-grow: .2;
   }
 }
@@ -76,8 +77,70 @@ body {
 }
 
 .footer {
-  background-color: $color-black;
+  background-color: $color-gray;
   color: $color-white;
-  padding:$indent__base;
+  padding: $indent__1;
   @include flexrow(center);
+}
+
+.home-grid {
+  background-color: $color-black;
+  gap: $indent__xxxl;
+  height: 100%;
+  border: $indent__s dotted $color-minsk;
+  justify-content: center;
+
+  &__article {
+    @include home-grid-article;
+    margin-bottom: $indent__xxxl;
+    border: 1px solid $color-gray;
+
+    &.good {
+      @include home-grid-article($color__2);
+      grid-area: main;
+    }
+
+    &.best {
+      @include home-grid-article($color-black);
+    }
+
+    &.delicious {
+      @include home-grid-article($color-primary);
+    }
+
+    &.nice {
+      @include home-grid-article($color-bright-sun);
+    }
+
+    &.better {
+      @include home-grid-article($color__4);
+    }
+
+    &.excellent {
+      @include home-grid-article($color-minsk)
+    }
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+
+  @include responsive-mobile {
+    @include layout;
+    grid-template-areas:
+      ". . ."
+      "main main ."
+      "main main .";
+    margin-bottom: 0;
+  }
+
+}
+
+// div {
+//   background-color: $color-gray;
+// }
+
+h1 {
+  text-align: center;
 }
